Eldas-Isometric-Portfolio-HTML5-Template
Best grid layout and browser compatible.

--- a/about-2.html
+++ b/about-2.html
@@ -143,7 +143,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>From the idea to product</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>Start with your business</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>From the idea to product</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
