--- a/index-2.html
+++ b/index-2.html
@@ -124,7 +124,7 @@
                                 business now!</h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">Duis autem vel eum iriure dolor in
                                 hendrerit
-                                in <br>vulputate velit esse mugiat nuesent lupt te fegait<br>nulla facilisi.</p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi.</p>
                             <div class="slider-btn wow" data-animation=" fadeInLeft" data-wow-delay=".6s">
                                 <a href="#" class="btn white">Get Started<i class="fas fa-play"></i></a>
                             </div>
@@ -147,7 +147,7 @@
                                 with virtual reality</h1>
                             <p data-animation="wow fadeInLeft" data-delay=".4s">Duis autem vel eum iriure adolor in
                                 hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInLeft" data-delay=".6s">
                                 <a href="#" class="btn second">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -173,9 +173,8 @@
                         <div class="slider-title third">
                             <h1 data-animation="fadeInRight" data-delay=".2s">We build beautiful
                                 <br> design and more</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn third">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -191,9 +190,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Website build easy <br>
                                 with visual layouts</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fourth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -214,9 +212,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Follow the <br>
                                 rules and grow</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fifth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -234,7 +231,7 @@
     <!-- slider area end -->
     <!-- service area start -->
     <section class="services second">
-        <div class="services-area fix pt-12 pb-45">
+        <div class="services-area pt-130 pb-45">
             <div class="container">
                 <div class="row d-flex align-items-center">
                     <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
@@ -245,7 +242,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>From the idea to product</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
@@ -258,7 +255,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>Start with your business</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
@@ -271,7 +268,7 @@
                             </div>
                             <div class="services-text second mt-20">
                                 <h5>From the idea to product</h5>
-                                <p>Consetetur sadipscing elitr, sed diam <br> nonumy eirmod tempor invidunt ut <br>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                                     labore et dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
