--- a/index-3.html
+++ b/index-3.html
@@ -124,7 +124,7 @@
                                 business now!</h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">Duis autem vel eum iriure dolor in
                                 hendrerit
-                                in <br>vulputate velit esse mugiat nuesent lupt te fegait<br>nulla facilisi.</p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi.</p>
                             <div class="slider-btn wow" data-animation=" fadeInLeft" data-wow-delay=".6s">
                                 <a href="#" class="btn white">Get Started<i class="fas fa-play"></i></a>
                             </div>
@@ -147,7 +147,7 @@
                                 with virtual reality</h1>
                             <p data-animation="wow fadeInLeft" data-delay=".4s">Duis autem vel eum iriure adolor in
                                 hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInLeft" data-delay=".6s">
                                 <a href="#" class="btn second">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -173,9 +173,8 @@
                         <div class="slider-title third">
                             <h1 data-animation="fadeInRight" data-delay=".2s">We build beautiful
                                 <br> design and more</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn third">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -191,9 +190,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Website build easy <br>
                                 with visual layouts</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fourth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -214,9 +212,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Follow the <br>
                                 rules and grow</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fifth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -549,8 +546,10 @@
                                     <img src="img/icon/home-3i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                                        guber-gren, no sea takimata sanctus est lorem.”</p>
+                                    <p>“Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+                                        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                                        dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+                                        eu feugiat nulla facilisis”</p>
                                 </div>
                                 <div class="client-profile">
                                     <img src="img/client/01.png" alt="">
@@ -569,8 +568,10 @@
                                     <img src="img/icon/home-3i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“Duis autem vel eum iriure dolor in hen-drerit in vulputate velit esse
-                                        molestie con-sequat, vel illum dolore eu feugiat.”</p>
+                                    <p>“Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+                                        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                                        dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+                                        eu feugiat nulla facilisis”</p>
                                 </div>
                                 <div class="client-profile">
                                     <img src="img/client/01.png" alt="">
@@ -589,8 +590,10 @@
                                     <img src="img/icon/home-3i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>Shulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-                                        praesent ipsum dolor sit amet, consectetuer.”</p>
+                                    <p>“Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+                                        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                                        dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+                                        eu feugiat nulla facilisis”</p>
                                 </div>
                                 <div class="client-profile">
                                     <img src="img/client/01.png" alt="">
