--- a/index-4.html
+++ b/index-4.html
@@ -124,7 +124,7 @@
                                 business now!</h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">Duis autem vel eum iriure dolor in
                                 hendrerit
-                                in <br>vulputate velit esse mugiat nuesent lupt te fegait<br>nulla facilisi.</p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi.</p>
                             <div class="slider-btn wow" data-animation=" fadeInLeft" data-wow-delay=".6s">
                                 <a href="#" class="btn white">Get Started<i class="fas fa-play"></i></a>
                             </div>
@@ -147,7 +147,7 @@
                                 with virtual reality</h1>
                             <p data-animation="wow fadeInLeft" data-delay=".4s">Duis autem vel eum iriure adolor in
                                 hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInLeft" data-delay=".6s">
                                 <a href="#" class="btn second">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -173,9 +173,8 @@
                         <div class="slider-title third">
                             <h1 data-animation="fadeInRight" data-delay=".2s">We build beautiful
                                 <br> design and more</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn third">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -191,9 +190,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Website build easy <br>
                                 with visual layouts</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fourth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -214,9 +212,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Follow the <br>
                                 rules and grow</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fifth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -250,9 +247,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Plan your strategy</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id
+                                    quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -263,9 +259,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Create your utilities</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id
+                                    quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -276,9 +271,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Manage your time</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id
+                                    quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -299,7 +293,7 @@
                             style="background-image: url(img/community-form/bg-1.png), url(img/community-form/bg-2.png);">
                             <div class="community-text">
                                 <h5>Join our community and friends</h5>
-                                <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita <br> kasd
+                                <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                                     gubergren, no sea takimata sanctus est Lorem ipsum dolor. </p>
                             </div>
                             <div class="submit-form">
@@ -542,7 +536,7 @@
                                     <img src="img/icon/home-2i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“At vero eos et accusam et justo duo <br> dolores et ea rebum. Stet clita kasd
+                                    <p>“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                                         guber-gren, no sea takimata sanctus est lorem.”</p>
                                 </div>
                                 <div class="client-profile">
@@ -562,8 +556,8 @@
                                     <img src="img/icon/home-2i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“Duis autem vel eum iriure dolor in hen- <br> drerit in vulputate velit esse
-                                        molestie con- <br> sequat, vel illum dolore eu feugiat.”</p>
+                                    <p>“Duis autem vel eum iriure dolor in hen- drerit in vulputate velit esse
+                                        molestie con- sequat, vel illum dolore eu feugiat.”</p>
                                 </div>
                                 <div class="client-profile">
                                     <img src="img/client/01.png" alt="">
@@ -602,7 +596,7 @@
                                     <img src="img/icon/home-2i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“At vero eos et accusam et justo duo <br> dolores et ea rebum. Stet clita kasd
+                                    <p>“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                                         guber-gren, no sea takimata sanctus est lorem.”</p>
                                 </div>
                                 <div class="client-profile">
@@ -622,8 +616,8 @@
                                     <img src="img/icon/home-2i-icon.png" alt="">
                                 </div>
                                 <div class="feedback-status">
-                                    <p>“Duis autem vel eum iriure dolor in hen- <br> drerit in vulputate velit esse
-                                        molestie con- <br> sequat, vel illum dolore eu feugiat.”</p>
+                                    <p>“Duis autem vel eum iriure dolor in hen- drerit in vulputate velit esse
+                                        molestie con- sequat, vel illum dolore eu feugiat.”</p>
                                 </div>
                                 <div class="client-profile">
                                     <img src="img/client/01.png" alt="">
