--- a/index-5.html
+++ b/index-5.html
@@ -124,7 +124,7 @@
                                 business now!</h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">Duis autem vel eum iriure dolor in
                                 hendrerit
-                                in <br>vulputate velit esse mugiat nuesent lupt te fegait<br>nulla facilisi.</p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi.</p>
                             <div class="slider-btn wow" data-animation=" fadeInLeft" data-wow-delay=".6s">
                                 <a href="#" class="btn white">Get Started<i class="fas fa-play"></i></a>
                             </div>
@@ -147,7 +147,7 @@
                                 with virtual reality</h1>
                             <p data-animation="wow fadeInLeft" data-delay=".4s">Duis autem vel eum iriure adolor in
                                 hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInLeft" data-delay=".6s">
                                 <a href="#" class="btn second">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -173,9 +173,8 @@
                         <div class="slider-title third">
                             <h1 data-animation="fadeInRight" data-delay=".2s">We build beautiful
                                 <br> design and more</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn third">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -191,9 +190,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Website build easy <br>
                                 with visual layouts</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fourth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -214,9 +212,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Follow the <br>
                                 rules and grow</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fifth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
