--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
                                             <li><a href="blog-2.html">Blog Post</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="contact.html">CONTACT </a></li> 
+                                    <li><a href="contact.html">CONTACT </a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -141,9 +141,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Plan your strategy</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming
+                                    id quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -154,9 +153,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Create your utilities</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming
+                                    id quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -167,9 +165,8 @@
                             </div>
                             <div class="services-text mt-20">
                                 <h5>Manage your time</h5>
-                                <p>Nam liber tempor cum soluta nobis eleifend <br> option congue nihil imperdiet doming
-                                    id
-                                    quod <br> mazim placerancidunt.</p>
+                                <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming
+                                    id quod mazim placerancidunt.</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +189,10 @@
                             <span class="wow fadeIn" data-wow-delay=".4s">OUR SERVICES</span>
                             <h1 class="wow lightSpeedIn" data-wow-delay=".6s">Start tracking <br>
                                 your statistics</h1>
-                            <p class="wow bounceInUp" data-wow-delay=".8s">Nam liber tempor cum soluta nobis eleifend  option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.</p>
+                            <p class="wow bounceInUp" data-wow-delay=".8s">Nam liber tempor cum soluta nobis eleifend
+                                option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem
+                                ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                                tincidunt.</p>
                         </div>
                         <div class="passion-btn text-right wow zoomIn mt-35" data-wow-delay=".10s">
                             <a href="#" class="btn third">LEARN MORE</a>
@@ -480,7 +480,10 @@
                             <div class="features-title second text-center">
                                 <span class="wow fadeIn" data-wow-delay=".2s">Get Started Today</span>
                                 <h2 class="wow bounceIn" data-wow-delay=".4s">We offer you a bunch of services</h2>
-                                <p class="wow zoomInDown" data-wow-delay=".6s">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat  nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>  
+                                <p class="wow zoomInDown" data-wow-delay=".6s">Duis autem vel eum iriure dolor in
+                                    hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat
+                                    nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
+                                    praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                                 <div class="features-btn wow fadeInRight mt-65" data-wow-delay=".8s">
                                     <a href="#" class="btn fourth">Get Started<i class="fas fa-play"></i></a>
                                     <a href="#" class="btn white">LOGIN NOW</i></a>
