--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 business now!</h1>
                             <p data-animation="fadeInLeft" data-delay=".4s">Duis autem vel eum iriure dolor in
                                 hendrerit
-                                in <br>vulputate velit esse mugiat nuesent lupt te fegait<br>nulla facilisi.</p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi.</p>
                             <div class="slider-btn wow" data-animation=" fadeInLeft" data-wow-delay=".6s">
                                 <a href="#" class="btn white">Get Started<i class="fas fa-play"></i></a>
                             </div>
@@ -164,7 +164,7 @@
                                 with virtual reality</h1>
                             <p data-animation="wow fadeInLeft" data-delay=".4s">Duis autem vel eum iriure adolor in
                                 hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                                in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInLeft" data-delay=".6s">
                                 <a href="#" class="btn second">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -190,9 +190,8 @@
                         <div class="slider-title third">
                             <h1 data-animation="fadeInRight" data-delay=".2s">We build beautiful
                                 <br> design and more</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn third">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -208,9 +207,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Website build easy <br>
                                 with visual layouts</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fourth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -231,9 +229,8 @@
                         <div class="slider-title fourth">
                             <h1 data-animation="fadeInRight" data-delay=".2s">Follow the <br>
                                 rules and grow</h1>
-                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure dolor in
-                                hendrerit
-                                in <br> vulputate velit esse mugiat nuesent lupt te fegait <br> nulla facilisi. </p>
+                            <p data-animation="fadeInRight" data-delay=".4s">Duis autem vel eum iriure adolor in
+                                hendrerit in vulputate velit esse mugiat nuesent lupt te fegait nulla facilisi. </p>
                             <div class="slider-btn" data-animation="fadeInRight" data-wow-delay=".6s">
                                 <a href="#" class="btn fifth">Find Out How<i class="fas fa-play"></i></a>
                             </div>
@@ -261,8 +258,8 @@
                             </div>
                             <div class="services-text text-center mt-30">
                                 <h5>Work from everywhere</h5>
-                                <p>Consetetur sadipscing elitr, sed diam nonumy<br>eirmod tempor invidunt ut labore et
-                                    dolor<br> erat, sed diam voluptua.</p>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+                                    dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
                     </div>
@@ -273,8 +270,8 @@
                             </div>
                             <div class="services-text text-center mt-30">
                                 <h5>Manage your shedule</h5>
-                                <p>Consetetur sadipscing elitr, sed diam nonumy<br>eirmod tempor invidunt ut labore et
-                                    dolor<br> erat, sed diam voluptua.</p>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+                                    dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
                     </div>
@@ -285,8 +282,8 @@
                             </div>
                             <div class="services-text text-center mt-30">
                                 <h5>Increase your workrates</h5>
-                                <p>Consetetur sadipscing elitr, sed diam nonumy<br>eirmod tempor invidunt ut labore et
-                                    dolor<br> erat, sed diam voluptua.</p>
+                                <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+                                    dolor erat, sed diam voluptua.</p>
                             </div>
                         </div>
                     </div>
@@ -605,7 +602,7 @@
                     <img src="img/product/line-1.png" alt="" class="line wow fadeInUp" data-wow-delay=".6s">
                     <img src="img/product/line-1.png" alt="" class="line wow fadeInUp" data-wow-delay=".8s">
                 </div>
-                <div class="col-xl-8 offset-xl-2 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+                <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                     <div class="features">
                         <div class="features-title text-center">
                             <span class="wow fadeIn" data-wow-delay=".10s">What we do</span>
